fix text overlapping header when scrolling

--- a/public/styles.css
+++ b/public/styles.css
@@ -21,7 +21,7 @@ header {
   border: 0;
   border-radius: 0 0 8px 0; /* top-left | top-right | bottom-right | bottom-left */
   box-shadow: 2px 0 2px #999999; /* offset-x | offset-y | blur-radius | color */
-  z-index: 1;
+  z-index: 2;
 }
 
 /* Font Style of the header title */
@@ -594,6 +594,7 @@ a.forgot-password { font-size: 15px; }
   border: 1px solid #cccccc;
   padding: 0.5em;
   font-family: Tahoma, sans-serif;
+  text-align: left;
 }
 
 .check {
@@ -610,6 +611,7 @@ a.forgot-password { font-size: 15px; }
 .editor-content {
   position: relative;
   text-align: left;
+  z-index: 1;
 }
 
 .verifyadmin-button {
